--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,18 +47,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Kenkyuu\Business\Character.cs" />
-    <Compile Include="Assets\Kenkyuu\Business\Contracts\CharacterController.cs" />
-    <Compile Include="Assets\Kenkyuu\Business\Definitions\ExperienceType.cs" />
-    <Compile Include="Assets\Kenkyuu\Business\Inventory\Item.cs" />
-    <Compile Include="Assets\Kenkyuu\Business\MainCharacter.cs" />
-    <Compile Include="Assets\Kenkyuu\Business\Properties\Experience.cs" />
-    <Compile Include="Assets\Kenkyuu\Business\Properties\Statistic.cs" />
-    <Compile Include="Assets\Kenkyuu\Business\Properties\Status.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Character.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\CharacterFactory.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Contracts\CharacterController.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Contracts\ICharacterFactory.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Contracts\ItemController.cs" />
+    <Compile Include="Assets\Kenkyuu\Inventory\Contracts\Item.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\MainCharacter.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\Experience.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\LevelManager.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\Statistic.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\Status.cs" />
     <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\Movement.cs" />
     <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\TrackTarget.cs" />
-    <Compile Include="Assets\Kenkyuu\Presentation\SessionState.cs" />
+    <Compile Include="Assets\Kenkyuu\Presentation\GameState\PartyState.cs" />
     <None Include="Assets\NewComputeShader.compute" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\Kenkyuu\Battle\Definitions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
