Added more structure and stubbed functions

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,14 +47,18 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Kenkyuu\Battle\Character.cs" />
+     <Compile Include="Assets\Kenkyuu\Battle\CharacterFactory.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Contracts\CharacterController.cs" />
+     <Compile Include="Assets\Kenkyuu\Battle\Contracts\ICharacterFactory.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Contracts\ItemController.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\MainCharacter.cs" />
-     <Compile Include="Assets\Kenkyuu\Battle\Properties\Experience.cs" />
-     <Compile Include="Assets\Kenkyuu\Battle\Properties\LevelManager.cs" />
+     <Compile Include="Assets\Kenkyuu\Battle\Properties\Mind.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Properties\Statistic.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Properties\Status.cs" />
+     <Compile Include="Assets\Kenkyuu\Battle\Properties\Tome.cs" />
+     <Compile Include="Assets\Kenkyuu\Battle\Properties\TomeExperience.cs" />
      <Compile Include="Assets\Kenkyuu\Inventory\Contracts\Item.cs" />
+     <Compile Include="Assets\Kenkyuu\Inventory\Weapon.cs" />
      <Compile Include="Assets\Kenkyuu\Presentation\GameState\PartyState.cs" />
      <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\Movement.cs" />
      <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\TrackTarget.cs" />
