--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -52,19 +52,18 @@
     <Compile Include="Assets\Kenkyuu\Battle\Contracts\CharacterController.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Contracts\ICharacterFactory.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Contracts\ItemController.cs" />
-    <Compile Include="Assets\Kenkyuu\Inventory\Contracts\Item.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\MainCharacter.cs" />
-    <Compile Include="Assets\Kenkyuu\Battle\Properties\Experience.cs" />
-    <Compile Include="Assets\Kenkyuu\Battle\Properties\LevelManager.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\TomeExperience.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\Mind.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Properties\Statistic.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Properties\Status.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\Tome.cs" />
+    <Compile Include="Assets\Kenkyuu\Inventory\Contracts\Item.cs" />
+    <Compile Include="Assets\Kenkyuu\Inventory\Weapon.cs" />
+    <Compile Include="Assets\Kenkyuu\Presentation\GameState\PartyState.cs" />
     <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\Movement.cs" />
     <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\TrackTarget.cs" />
-    <Compile Include="Assets\Kenkyuu\Presentation\GameState\PartyState.cs" />
     <None Include="Assets\NewComputeShader.compute" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\Kenkyuu\Battle\Definitions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
