--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -53,11 +53,23 @@
     <Compile Include="Assets\Kenkyuu\Battle\Contracts\ICharacterFactory.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Contracts\ItemController.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\MainCharacter.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\Experience.cs" />
+    <Compile Include="Assets\Kenkyuu\Battle\Properties\LevelManager.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Properties\Mind.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Properties\Statistic.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Properties\Status.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Properties\Tome.cs" />
     <Compile Include="Assets\Kenkyuu\Battle\Properties\TomeExperience.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Character.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Contracts\CharacterController.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Contracts\ItemController.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Definitions\ExperienceType.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Inventory\Item.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\MainCharacter.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Properties\Experience.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Properties\LevelManager.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Properties\Statistic.cs" />
+    <Compile Include="Assets\Kenkyuu\Business\Properties\Status.cs" />
     <Compile Include="Assets\Kenkyuu\Inventory\Contracts\Equipable.cs" />
     <Compile Include="Assets\Kenkyuu\Inventory\Contracts\Item.cs" />
     <Compile Include="Assets\Kenkyuu\Inventory\Weapon.cs" />
@@ -65,6 +77,7 @@
     <Compile Include="Assets\Kenkyuu\Presentation\GameState\StoryState.cs" />
     <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\Movement.cs" />
     <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\TrackTarget.cs" />
+    <Compile Include="Assets\Kenkyuu\Presentation\SessionState.cs" />
     <None Include="Assets\NewComputeShader.compute" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
