--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,7 +50,6 @@
      <Compile Include="Assets\Kenkyuu\Battle\CharacterFactory.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Contracts\CharacterController.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Contracts\ICharacterFactory.cs" />
-     <Compile Include="Assets\Kenkyuu\Battle\Contracts\ItemController.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\MainCharacter.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Properties\Equipment.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Properties\Mind.cs" />
@@ -58,14 +57,14 @@
      <Compile Include="Assets\Kenkyuu\Battle\Properties\Status.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Properties\Tome.cs" />
      <Compile Include="Assets\Kenkyuu\Battle\Properties\TomeExperience.cs" />
+     <Compile Include="Assets\Kenkyuu\GameState\PartyState.cs" />
+     <Compile Include="Assets\Kenkyuu\GameState\StoryState.cs" />
      <Compile Include="Assets\Kenkyuu\Inventory\Contracts\Equipable.cs" />
      <Compile Include="Assets\Kenkyuu\Inventory\Contracts\Item.cs" />
      <Compile Include="Assets\Kenkyuu\Inventory\Weapon.cs" />
-     <Compile Include="Assets\Kenkyuu\Presentation\GameState\PartyState.cs" />
-     <Compile Include="Assets\Kenkyuu\Presentation\GameState\StoryState.cs" />
-     <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\Movement.cs" />
-     <Compile Include="Assets\Kenkyuu\Presentation\OverWorld\TrackTarget.cs" />
-     <Compile Include="Assets\Kenkyuu\Presentation\SessionState.cs" />
+     <Compile Include="Assets\Kenkyuu\OverWorld\Movement.cs" />
+     <Compile Include="Assets\Kenkyuu\OverWorld\TrackTarget.cs" />
+     <Compile Include="Assets\Kenkyuu\TurnBasedBattle\BattleEngine.cs" />
      <None Include="Assets\NewComputeShader.compute" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
